Added sorting support by clicking on table cell header

--- a/app/templates/ember_table/simple.hbs
+++ b/app/templates/ember_table/simple.hbs
@@ -39,23 +39,27 @@
       columnWidth: 150
       textAlign: 'text-align-left'
       headerCellName: 'Date'
-      getCellContent: (row) -> row['date'].toDateString();
+      getCellContent: (row) -> row.get('date').toDateString();
     openColumn = Ember.Table.ColumnDefinition.create
       columnWidth: 100
       headerCellName: 'Open'
-      getCellContent: (row) -> row['open'].toFixed(2)
+      getCellContent: (row) -> row.get('open').toFixed(2)
+      compareCellValues: (firstRow, secondRow) -> firstRow.open - secondRow.open
     highColumn = Ember.Table.ColumnDefinition.create
       columnWidth: 100
       headerCellName: 'High'
-      getCellContent: (row) -> row['high'].toFixed(2)
+      getCellContent: (row) -> row.get('high').toFixed(2)
+      compareCellValues: (firstRow, secondRow) -> firstRow.high - secondRow.high
     lowColumn = Ember.Table.ColumnDefinition.create
       columnWidth: 100
       headerCellName: 'Low'
-      getCellContent: (row) -> row['low'].toFixed(2)
+      getCellContent: (row) -> row.get('low').toFixed(2)
+      compareCellValues: (firstRow, secondRow) -> firstRow.low - secondRow.low
     closeColumn = Ember.Table.ColumnDefinition.create
       columnWidth: 100
       headerCellName: 'Close'
-      getCellContent: (row) -> row['close'].toFixed(2)
+      getCellContent: (row) -> row.get('close').toFixed(2)
+      compareCellValues: (firstRow, secondRow) -> firstRow.close - secondRow.close
     [dateColumn, openColumn, highColumn, lowColumn, closeColumn]
 
   content: Ember.computed ->
